--- a/sportcheck.html
+++ b/sportcheck.html
@@ -151,7 +151,7 @@
 			<div>
 			  	<h3>Channel Name</h3>
 			  	<p>After a long process of trying to come up with catchy names for this sports news channel, I eventually ended up with 'SportCheck'.</p>
-				<p>This is because I am guilty of always checking my phone at bad times to make sure that I am constantly aware of what the latest scores are and whats happening in the sport world. Needing to do this quickly it seems fitting to have the channel name sound similar to "spot check".</p><br>
+				<p>This is because I am guilty of checking my phone at bad times to ensure I'm constantly aware of updates in the sport world. Needing to do this quickly, it's fitting to have the channel name sound similar to "spot check".</p><br>
 			</div>
 		
 		</div>
@@ -174,7 +174,7 @@
 			
 			<div>
 				<h3>Channel Logo</h3>
-				<p>Coming up with a name was, to me, the hardest part of the process so far as I already have some ideas for how I want to channel logo to look. It has to be simple, bold, eye-catching and portray what the channel is about.</p>
+				<p>Coming up with a name was, to me, the hardest part of the process as I already had some ideas for how I wanted to channel logo to look. It had to be simple, bold, eye-catching and portray what the channel is about.</p>
 				<br>
 			</div>
 		</div>
@@ -213,7 +213,7 @@
 		
 		<div class="centered-text">
 			<p>The final logo.</p>
-			<p> The reason for this design is because the 'O' looks as if it is crossing the line made by the 'H' in 'CHECK'. This is a similar visual to the ball crossing the goal line in football, which would have to be chcked by the match officials. </p>
+			<p> The reason for this design is because the 'O' looks as if it is crossing the line made by the 'H' in 'CHECK'. This is a similar visual to the ball crossing the goal line in football, which would have to be checked by the match officials. </p>
 		  <br>
 		</div>
 		
@@ -223,9 +223,9 @@
 			
 			<div>
 				<h3>Channel Colour Scheme</h3>
-				<p>Now that I have the name and logo of the channel, I need to find a suitable colour scheme that would catch the viewers attention in advertising but would be suitable for people to look at for long periods of time on their phones and on the telly.</p>
-			  <p>One of the most striking, powerful and bold colours is black [#000000] so that will be one of the base colours, perhaps for any type as it is easily legible on top of most other colours.</p>
-				<p>The other colours would have to be bright and vibrant to stand out to people in advertising but a different colour would have to be used in the elements that are going to be looked at for long periods of time as the brighter colours could cause viewers eyes to feel strained. </p>
+				<p>Once the name and logo of the channel had been decided, I needed to find a suitable colour scheme that would catch the viewers attention in advertising but would be suitable for people to look at for longer periods of time on their devices.</p>
+			  <p>One of the most striking, powerful and bold colours is black [#000000] so that would be one of the base colours, perhaps for any type as it is easily legible on top of most other colours.</p>
+				<p>The other colours had to be bright and vibrant to stand out to people in advertising but a different colour had to be used in the elements that are going to be looked at for long periods of time. This is because the brighter colours could cause viewers eyes to feel strained. </p>
 				<br>
 			</div>
 		</div>
@@ -252,7 +252,7 @@
 		<!-- Image Caption -->
 		
 		<div class="centered-text">
-			<p>This is the chosen colour scheme that I think would work best for this project.</p><br>
+			<p>This is the chosen colour scheme that I thought would work best for this project.</p><br>
 			<p>
 				Black:<br>
 				HEX: #000000<br>
@@ -276,8 +276,8 @@
 		<div class="centered-text">
 			<div>
 				<h3>Channel Typefaces</h3>
-				<p>The typefaces that are going to be used need to be easily legible more than anything. This is because it will being conveying information about the sports world to viewers. It also needs to be sans-serif  to make sure it is, again, easily legible.</p>
-				<p>The first typeface used is ITC Avant Garde Gothic LT Bold, which would be used for headlines and titles. It makes sense to use this typefaces as it is the one used in the Sport Check logo. When put into italics it uses an 11 degree angle.&nbsp;&nbsp;</p>
+				<p>The typefaces used needed to be easily legible more than anything. This is because it conveys information about the sports world to viewers. It was for the same reason that I decided it needed to be a sans-serif typeface.</p>
+				<p>The first typeface used is ITC Avant Garde Gothic LT Bold, which would be used for headlines and titles. It made sense to use this typefaces as it mirrors the one used in the Sport Check logo. When put into italics it uses an 11 degree angle.</p>
 			  <br>
 			</div>
 		</div>
