--- a/projects.html
+++ b/projects.html
@@ -114,7 +114,7 @@
 		  	</a>
 			
 			<br>
-			<a href="#">
+			<a href="/sportcheck.html">
 				<p>Project 4 [Work in Progress]</p>
 				<h1>Sport Check</h1>
 		  	</a>
