--- a/sportcheck.html
+++ b/sportcheck.html
@@ -133,7 +133,7 @@
 			<div>
 				<a id="channel_assets"><h3>Channel Asset Menu:</h3></a>
 				<p>
-				<a href="/sportcheck-newsoverlay.html">News Channel Overlays</a>
+				<a href="/sportcheck-newsoverlay.html">News Channel Overlay</a>
 				<br>
 				<a href="/sportcheck-ident.html">TV Idents</a><br>
 				Posters/Ads<br>
