--- a/sportcheck.html
+++ b/sportcheck.html
@@ -133,14 +133,14 @@
 			<div>
 				<a id="channel_assets"><h3>Channel Asset Menu:</h3></a>
 				<p>
-				<a href="/sportcheck-newsoverlay.html">News Channel Overlay</a>
+				<a href="/sportcheck-newsoverlay.html">[News Channel Overlay]</a>
 				<br>
-				<a href="/sportcheck-ident.html">TV Idents</a><br>
-				Posters/Ads<br>
-				Website<br>
-				App<br>
-				Social Media Post Templates<br>
-				Staff Apparel </p>
+				<a href="/sportcheck-ident.html">[TV Ident]</a><br>
+				[Posters/Ads]<br>
+				[Website]<br>
+				[Scores &amp; News App]<br>
+				[Social Media]<br>
+				[Staff Apparel]</p>
 				<br>
 				
 				
