--- a/watfordfc.html
+++ b/watfordfc.html
@@ -120,8 +120,23 @@
 		  	<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/WatfordAssets.png" alt="Assets">
 		  	<p> Mockup of new club crest on tickets, a scarf &amp; kits.<br></p><br>
 		  	<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/WatfordAlternate.png" alt="Alternate Logo">
-		  	<p style="padding-bottom: 100px"> Alternate crest design using a circle instead of the classic shield.</p>
+		  	<p style="padding-bottom: 75px"> Alternate crest design using a circle instead of the classic shield.</p>
+			
+			<div class="centered-text">
+			<h1>Watford FC 23/24 Kit Design</h1>
+			<p>Every year I try to create a new kit for Watford FC for the new season ahead, and being that time of the year when new kits for bigger clubs are starting to be leaked, I thought this would be the best time to try my hand at creating something new for the club I love.</p><p>I tried to take elements from previous seasons in which supporters felt more connected to the club, which is something that is lacking at the moment, and could (hopefully) symbolise the start of a chapter.</p> <p>I removed the Stake.com sponsor from the last two seasons as being the "original family club" a betting sponsor doesn't reflect this. For this reason I opted to use a placeholder sponsor of the Watford Observer, as many Watford FC fans use the local newspaper to keep up to date with club news and information.</p><br>
 		</div>
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/Watford23-24KitImages/Sketches.png" alt="Skecthes">
+			<p> Sketches of new kit design.&nbsp;<br></p><br>
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/Watford23-24KitImages/Colour.png" alt="Colour Added">
+		  	<p> Colour added to new kit design.<br></p><br>
+		  	<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/Watford23-24KitImages/Final.png" alt="Final Kits">
+		  	<p style="padding-bottom: 100px"> Mockup of new potential kits for the 23/24 season.<br></p><br>
+
+		
+		
+		
+	</div>
 
 </body>
 
