--- a/projects.html
+++ b/projects.html
@@ -6,8 +6,8 @@
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
   <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
-  <meta property="og:title" content="mikey chapman." />
-  <meta property="og:description" content="welcome to my portfolio." />
+  <meta property="og:title" content="Projects" />
+  <meta property="og:description" content="Mikey Chapman" />
 	<style>
 		body {
 			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -96,28 +96,28 @@
 	<a class="back-button" onclick="history.back()"><h2>&lt; back.</h2></a>
 	<div class="container">
 		<div class="centered-text">
-		  	
-			<a href="/watfordfc.html">
+		  	<a href="/watfordfc.html">
 				<p>Project 1</p>
-				<h1>Watford FC Rebrand</h1>
+				<h1>Watford FC</h1>
 		  	</a>
 			<br>
 			<a href="/afcstaustell.html">
 				<p>Project 2</p>
-				<h1>AFC St. Austell Rebrand</h1>
+				<h1>AFC St. Austell</h1>
 		  	</a>
-			
 			<br>
-			<a href="/23-24-watford-kit.html">
+			<a href="/orbitproperty.html">
 				<p>Project 3</p>
-				<h1>Watford FC 23/24 Kit Design</h1>
+				<h1>Orbit Property</h1>
 		  	</a>
-			
 			<br>
 			<a href="/sportcheck.html">
-				<p>Project 4 [Work in Progress]</p>
+				<p>Project 4 [Work In Progress]</p>
 				<h1>Sport Check</h1>
 		  	</a>
+			<br>
+			<br>
+			<p>[Other Projects]</p>
 	  	</div>
 	</div>
 </body>
