--- a/afcstaustell.html
+++ b/afcstaustell.html
@@ -105,7 +105,7 @@
 </head>
 	
 <body>
-	<a class="back-button" onclick="history.back()"><h2>&lt; back.</h2></a>
+	<a class="back-button" href="/projects.html"><h2>&lt; back.</h2></a>
 	<div class="container">
 		<div class="centered-text">
 			<h1>AFC St. Austell Rebrand</h1>
