--- a/awaydays.html
+++ b/awaydays.html
@@ -139,7 +139,7 @@
 </head>
 	
 <body>
-	<a class="back-button" onclick="history.back()"><h2>&lt; back.</h2></a>
+	<a class="back-button" href="/home.html"><h2>&lt; back.</h2></a>
 	<div class="container">
 		<div class="centered-text">
 			<h1>Away Days</h1>
