--- a/orbitproperty.html
+++ b/orbitproperty.html
@@ -123,7 +123,7 @@
 <body>
 	
 	
-	<a class="back-button" onclick="history.back()"><h2>&lt; back.</h2></a>
+	<a class="back-button" href="/projects.html"><h2>&lt; back.</h2></a>
 	
 	
 	<div class="container">
