--- a/projects.html
+++ b/projects.html
@@ -93,7 +93,7 @@
 </head>
 	
 <body>
-	<a class="back-button" href="/index.html"><h2>&lt; back.</h2></a>
+	<a class="back-button" href="/home.html"><h2>&lt; back.</h2></a>
 	<div class="container">
 		<div class="centered-text">
 		  	<a href="/watfordfc.html">
