--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
 </head>
 	
 <body>
-	<a class="back-button" href="/home.html"><h2>&lt; back.</h2></a>
+	<a class="back-button" href="/home.html"><h2>Back</h2></a>
 	<div class="container">
 		<div class="centered-text">
 			
