--- a/contact.html
+++ b/contact.html
@@ -93,7 +93,7 @@
 </head>
 	
 <body>
-	<a class="back-button" href="/home.html"><h2>&lt; back.</h2></a>
+	<a class="back-button" href="/home.html"><h2>Back</h2></a>
 	<div class="container">
 		<div class="centered-text">
 		  	<h1>Twitter</h1>
