--- a/orbitproperty.html
+++ b/orbitproperty.html
@@ -6,7 +6,7 @@
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
   <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/SportsCheck/sportcheckshareimage.png" />
-  <meta property="og:title" content="Sport Check Design" />
+  <meta property="og:title" content="Orbit Property" />
   <meta property="og:description" content="Mikey Chapman" />
 	<style>
 		body {
@@ -123,7 +123,7 @@
 <body>
 	
 	
-	<a class="back-button" href="/projects.html"><h2>&lt; back.</h2></a>
+	<a class="back-button" href="/projects.html"><h2>Back</h2></a>
 	
 	
 	<div class="container">
