--- a/otherprojects.html
+++ b/otherprojects.html
@@ -93,7 +93,7 @@
 </head>
 	
 <body>
-	<a class="back-button" href="/projects.html"><h2>&lt; back.</h2></a>
+	<a class="back-button" href="/projects.html"><h2>Back</h2></a>
 	<div class="container">
 		<div class="centered-text">
 		  	<a href="#">
