--- a/watfordfc.html
+++ b/watfordfc.html
@@ -6,8 +6,8 @@
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
   <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
-  <meta property="og:title" content="mikey chapman." />
-  <meta property="og:description" content="welcome to my portfolio." />
+  <meta property="og:title" content="Mikey Chapman" />
+  <meta property="og:description" content="Watford FC" />
 	<style>
 		body {
 			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -105,7 +105,7 @@
 </head>
 	
 <body>
-	<a class="back-button" href="/projects.html"><h2>&lt; back.</h2></a>
+	<a class="back-button" href="/projects.html"><h2>Back</h2></a>
 	<div class="container">
 		<div class="centered-text">
 			<h1>Watford FC Rebrand</h1>
