--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
   <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
-  <meta property="og:title" content="mikey chapman." />
-  <meta property="og:description" content="welcome to my portfolio." />
+  <meta property="og:title" content="Mikey Chapman" />
+  <meta property="og:description" content="About" />
 	<style>
 		body {
 			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -111,6 +111,8 @@
 			<h1>As an avid Watford FC fan, he travels round the country to watch the Hornets play and aspires to complete the 92.</h1>
 			
 			<p>[26/92]</p>
+			
+			<p>This site was built by Mikey Chapman from scratch using HTML coding in Adobe Dreamweaver</p>
 	  
 		</div>
 </div>
