--- a/afcstaustell.html
+++ b/afcstaustell.html
@@ -6,8 +6,8 @@
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
   <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
-  <meta property="og:title" content="Mikey Chapman" />
-  <meta property="og:description" content="AFC St. Austell Rebrand" />
+  <meta property="og:title" content="AFC St. Austell Rebrand" />
+  <meta property="og:description" content="Mikey Chapman" />
 	<style>
 		body {
 			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
