--- a/awaydays.html
+++ b/awaydays.html
@@ -177,7 +177,8 @@
 			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Reading.png" alt="Reading" width="333px" title="Reading 2-2 Watford"></div>
 			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/SheffieldUtd.png" alt="Sheffield Utd" width="333px" title="Sheffield United 1-0 Watford"></div>
 			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/QPR.png" alt="QPR" width="333px" title="Queen's Park Rangers 1-0 Watford"></div>
-			<div class="image" style="padding-bottom: 100px"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Luton.png" alt="Luton" width="333px" title="Luton Town 2-0 Watford"></div>
+			<div class="image"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Luton.png" alt="Luton" width="333px" title="Luton Town 2-0 Watford"></div>
+			<div class="image" style="padding-bottom: 100px"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Coventry.png" alt="Coventry" width="333px" title="Coventry City 2-2 Watford"></div>
 		</div>
 		
 	</div>
