--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 			flex-direction: column;
 			align-items: center;
 			justify-content: center;
-			height: 100vh;
+			margin-top: 250px;
 		}
 		
 		.centered-text {
@@ -92,6 +92,9 @@
 			.centered-text {
 				text-align: center;
 				max-width: 80%;
+			}
+			.container {
+				margin-top: 100px;
 			}
 		}
 	</style>
