--- a/sportcheck.html
+++ b/sportcheck.html
@@ -136,11 +136,11 @@
 				<a href="/sportcheck-newsoverlay.html">[News Channel Overlay]</a>
 				<br>
 				<a href="/sportcheck-ident.html">[TV Ident]</a><br>
-				[Posters/Ads]<br>
-				[Website]<br>
-				[Scores &amp; News App]<br>
-				[Social Media]<br>
-				[Staff Apparel]</p>
+				Posters/Ads<br>
+				Website<br>
+				Scores &amp; News App<br>
+				Social Media<br>
+				Staff Apparel</p>
 				<br>
 				
 				
