--- a/home.html
+++ b/home.html
@@ -99,7 +99,7 @@
 		  <a href="/projects.html"><h1>Projects</h1></a>
 			<a href="/about.html"><h1>About</h1></a>
 			<a href="/contact.html"><h1>Contact</h1></a>
-			<a href="/awaydays.html"><h1>Away Days</h1></a>
+			<a href="/football.html"><h1>Football</h1></a>
 	  </div>
 </div>
 </body>
