--- a/champ22-23.html
+++ b/champ22-23.html
@@ -8,15 +8,20 @@
   <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
   <meta property="og:title" content="Championship 2022/23 Away Days" />
   <meta property="og:description" content="Mikey Chapman" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500&display=swap" rel="stylesheet">
+	
 	<style>
 		body {
-			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+			
 		}
 
-		h3, h2, h1, p {
-			font-weight: 100; /* light font weight */
+		h2, h1, p, a {
+			font-weight: 300; /* light font weight */
 			letter-spacing: 2px;
 			color: #333; /* dark grey color */
+			font-family: 'Poppins', sans-serif;
 		}
 
 		h1 {
