--- a/sportcheck-ads.html
+++ b/sportcheck-ads.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sport Check - Ident</title>
+	<title>Sport Check - Advertisements</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
@@ -19,7 +19,7 @@
 			
 		}
 
-		h2, h1, p, a {
+		h3, h2, h1, p, a {
 			font-weight: 300; /* light font weight */
 			letter-spacing: 2px;
 			color: #333; /* dark grey color */
