--- a/sportcheck.html
+++ b/sportcheck.html
@@ -138,15 +138,13 @@
 			<div>
 				<a id="channel_assets"><h3>Channel Asset Menu:</h3></a>
 				<p>
-				<a href="/sportcheck-newsoverlay.html">[News Channel Overlay]</a>
-				<br>
+				<a href="/sportcheck-newsoverlay.html">[News Channel Overlay]</a><br>
 				<a href="/sportcheck-ident.html">[TV Ident]</a><br>
-				Posters/Ads<br>
+				<a href="/sportcheck-ads.html">[Posters/Ads]</a><br>
 				Website<br>
 				Scores &amp; News App<br>
 				Social Media<br>
-				Staff Apparel</p>
-				<br>
+				Staff Apparel</p><br>
 				
 				
 			</div>
