--- a/sportcheck-ads.html
+++ b/sportcheck-ads.html
@@ -208,7 +208,7 @@
 		</div>
 		
 		<div class="centered-text">
-			<p style="padding-bottom: 100px">The story board plays on the fact that the product is used at awkward times or inappropriate times in our lives, so I wanted ot create a mildly funny ad to represent this.</p>
+			<p style="padding-bottom: 100px">The story board plays on the fact that the product is used at awkward times or inappropriate times in our lives, so I wanted to create a mildly funny ad to represent this.</p>
 			
 		</div>
 		
