--- a/sportcheck-ads.html
+++ b/sportcheck-ads.html
@@ -164,7 +164,7 @@
 		</div>
 		
 		<div class="centered-text">
-			<p>The first set of posters creating in both Adobe Illustrator and Photoshop. Something about these reminded me of Boots Opticians but I couldn't put my finger on what it was. After playing about more with the layout and design of the posters, I decided that I didn't want to use any imagery at all, but wanted to have a humerous catchphrase or punch line instead.</p>
+			<p>The first set of posters created in both Adobe Illustrator and Photoshop. Something about these reminded me of Boots Opticians but I couldn't put my finger on what it was. After playing about more with the layout and design of the posters, I decided that I didn't want to use any imagery at all, but wanted to have a humerous catchphrase or punch line instead.</p>
 			<br>
 		</div>
 		
