--- a/sportcheck.html
+++ b/sportcheck.html
@@ -141,9 +141,9 @@
 				<a href="/sportcheck-newsoverlay.html">[News Channel Overlay]</a><br>
 				<a href="/sportcheck-ident.html">[TV Ident]</a><br>
 				<a href="/sportcheck-ads.html">[Posters/Ads]</a><br>
-				Website<br>
 				Scores &amp; News App<br>
-				Social Media<br>
+				Website<br>
+				Social Media Branding<br>
 				Staff Apparel</p><br>
 				
 				
