--- a/sportcheck.html
+++ b/sportcheck.html
@@ -141,7 +141,7 @@
 				<a href="/sportcheck-newsoverlay.html">[News Channel Overlay]</a><br>
 				<a href="/sportcheck-ident.html">[TV Ident]</a><br>
 				<a href="/sportcheck-ads.html">[Posters/Ads]</a><br>
-				Scores &amp; News App<br>
+				<a href="/sportcheck-app.html">[Scores &amp; News App]</a><br>
 				Website<br>
 				Social Media Branding<br>
 				Staff Apparel</p><br>
