--- a/sportcheck-ads.html
+++ b/sportcheck-ads.html
@@ -173,7 +173,7 @@
 		</div>
 		
 		<div class="centered-text">
-			<p>this is the first and main poster of the Sport Check poster series along with a mockup of how it would look when printed and displayed.</p>
+			<p>This is the first and main poster of the Sport Check poster series along with a mockup of how it would look when printed and displayed.</p>
 			<br>
 			
 		</div>
