--- a/internationalstadiums.html
+++ b/internationalstadiums.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>International Stadiums</title>
+	<title>Premier League 2021/22</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
   <meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
-  <meta property="og:title" content="International Stadiums" />
-  <meta property="og:description" content="Mikey Chapman" />
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500&display=swap" rel="stylesheet">
-	
+  <meta property="og:title" content="mikey chapman." />
+  <meta property="og:description" content="welcome to my portfolio." />
 	<style>
 		body {
-			
+			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 		}
 
-		h2, h1, p, a {
-			font-weight: 300; /* light font weight */
+		h3, h2, h1, p, p1 {
+			font-weight: 100; /* light font weight */
 			letter-spacing: 2px;
 			color: #333; /* dark grey color */
-			font-family: 'Poppins', sans-serif;
 		}
 
 		h1 {
@@ -182,7 +177,7 @@
 			<p>
 				<p1>Camp Nou</p1><br>FC Barcelona<br>
 				Barcelona, Spain<br>
-				2015</p>
+				October 2015</p>
 			<br>
 			<br>
 		</div>
@@ -197,7 +192,7 @@
 			<p><p1>Johan Cruijff ArenA</p1><br>
 				AFC Ajax<br>
 				Amsterdam, Netherlands<br>
-				2022</p>
+				August 2022</p>
 			<br>
 			<br>
 		</div>
@@ -212,7 +207,7 @@
 			<p><p1>Kras Stadion</p1><br>
 				FC Volendam<br>
 				Volendam, Netherlands<br>
-				2022</p>
+				August 2022</p>
 			<br>
 			<br>
 		</div>
@@ -227,7 +222,7 @@
 			<p><p1>Estádio do Dragão</p1><br>
 				FC Porto<br>
 				Porto, Portugal<br>
-				2022</p>
+				October 2022</p>
 			<br>
 			<br>
 		</div>
@@ -242,7 +237,7 @@
 			<p><p1>Brianteo Stadium</p1><br>
 				AC Monza<br>
 				Monza, Italy<br>
-				2023</p>
+				April 2023</p>
 			<br>
 			<br>
 		</div>
@@ -257,7 +252,37 @@
 			<p><p1>San Siro</p1><br>
 				AC Milan<br>
 				Milan, Italy<br>
-				2023</p>
+				April 2023</p>
+			<br>
+			<br>
+		</div>
+		
+		<!-- Image -->
+		
+		<div>
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/StadiumsAbroad/Lille.jpg" alt="LOSC Lille">
+		</div>
+		
+		<div class="centered-text">
+			<p><p1>Stade Pierre-Mauroy</p1><br>
+				LOSC Lille<br>
+				Lille, France<br>
+				May 2023</p>
+			<br>
+			<br>
+		</div>
+		
+		<!-- Image -->
+		
+		<div>
+			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/StadiumsAbroad/Kortrijk.jpg" alt="KV Kortrijk">
+		</div>
+		
+		<div class="centered-text">
+			<p><p1>Guldensporen Stadion</p1><br>
+				KV Kortrijk<br>
+				Kortrijk, Belgium<br>
+				May 2023</p>
 			<br>
 			<br>
 		</div>
