--- a/sportcheck.html
+++ b/sportcheck.html
@@ -129,7 +129,10 @@
 			
 			<div>
 				<h1>Sport Check - Sports News Channel</h1>
-				<p>After creating the designs for the Watford 23/24 season home kits, I felt that I should try my hand at a much larger project. Being a huge sports fan in general and not just football (contrary to popular belief), it seemed right to try to create my own sports news channel that can be customised with incoming information and most aspects animated.</p>
+				<p>After creating the designs for the Watford 23/24 season home kits, I felt that I should try my hand at a much larger project.
+					Being a huge sports fan in general and not just football (contrary to popular belief), it seemed right to try to create my own
+					sports news channel that can be customised with incoming information and most aspects animated.<br><br>Click on the different assets 
+					below to see each of their individual design processes!</p>
 				<br>
 			</div>
 			
