--- a/football.html
+++ b/football.html
@@ -105,6 +105,7 @@
 			<p>Watford Away Days</p>
 		  	<a href="/prem21-22.html"><h1>Premier League 2021/22</h1></a>
 			<a href="/champ22-23.html"><h1>Championship 2022/23</h1></a>
+			<a href="/champ23-24.html"><h1>Championship 2023/24</h1></a>
 			<br>
 			<a href="/internationalstadiums.html"><h1>International Stadiums</h1></a>
 	  </div>
