--- a/sportcheck-apparel.html
+++ b/sportcheck-apparel.html
@@ -140,7 +140,7 @@
 			
 			<div>
 				<h1>Sport Check - Staff Apparel</h1>
-				<p>The staf of the company would need something to wear so that they can recognise who is one of their own and who isn't, like a school uniform almost but more casual, as I was always someone that hated to wear smart casual clothes. One thing I always loved to wear and still love to wear is football kits, so it could be fitting to have staff apparel in the same style or made from the same material.</p>
+				<p>The staff of the company would need something to wear so that they can recognise who is one of their own and who isn't, like a school uniform almost but more casual, as I was always someone that hated to wear smart casual clothes. One thing I always loved to wear and still love to wear is football kits, so it could be fitting to have staff apparel in the same style or made from the same material.</p>
 				<br>
 			</div>
 			
