--- a/sportcheck-apparel.html
+++ b/sportcheck-apparel.html
@@ -155,7 +155,7 @@
 		<!-- Image Caption -->
 		
 		<div class="centered-text">
-			<p>Above are some designs that I thought could work as shirts for on-site employees to waer throughout the day.</p>
+			<p>Above are some designs that I thought could work as shirts for on-site employees to wear throughout the day.</p>
 			<br>
 		</div>
 		
@@ -173,7 +173,7 @@
 		</div>
 		
 		<div class="centered-text">
-			<p>What staff tops could look like if they were created by Adidas.&nbsp;</p>
+			<p>What staff tops could look like if they were created by Adidas.</p>
 			<br>
 			
 		</div>
