--- a/projects.html
+++ b/projects.html
@@ -118,7 +118,7 @@
 		  	</a>
 			<br>
 			<a href="/sportcheck.html">
-				<p>Project 4 [Work In Progress]</p>
+				<p>Project 4</p>
 				<h1>Sport Check</h1>
 		  	</a>
 			<br>
