--- a/football.html
+++ b/football.html
@@ -102,12 +102,14 @@
 	<a class="back-button" href="/home.html"><h2>Back</h2></a>
 	<div class="container">
 		<div class="centered-text">
-			<a href="/the92.html"><h1>The 92</h1></a>
+			
 			<p>Watford Away Days</p>
 		  	<a href="/prem21-22.html"><h1>Premier League 2021/22</h1></a>
 			<a href="/champ22-23.html"><h1>Championship 2022/23</h1></a>
 			<a href="/champ23-24.html"><h1>Championship 2023/24</h1></a>
 			<br>
+			<p>Stadium Visits</p>
+			<a href="/the92.html"><h1>The 92 Challenge</h1></a>
 			<a href="/internationalstadiums.html"><h1>International Stadiums</h1></a>
 	  </div>
 </div>
