--- a/the92.html
+++ b/the92.html
@@ -208,7 +208,7 @@
 		</div>
 		
 		
-        <div class="image-row">
+        <div class="image-row style="padding-bottom: 100px;">
             
 			
 			<!-- CODE FOR NO POP UP AND BLANK -->
