--- a/UKStadiums.html
+++ b/UKStadiums.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>The 92</title>
+	<title>Other UK Stadiums</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/favicon.png">
 	
   	<meta property="og:image" content="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/shareimage.png" />
-  	<meta property="og:title" content="The 92" />
+  	<meta property="og:title" content="Other UK Stadiums" />
   	<meta property="og:description" content="Mikey Chapman" />
 	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
