--- a/UKStadiums.html
+++ b/UKStadiums.html
@@ -263,9 +263,9 @@
         	</div>
 			
 			<div class="image-container">
-    			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Borehamwood.png" alt="" style="opacity: 10%">
+    			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Borehamwood.png" alt="" style="opacity: 100%">
     			<div class="image-popup">
-      			
+      			<img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/Borehamwood.png" alt="">
 				</div>
         	</div>
 			
