--- a/test2.html
+++ b/test2.html
@@ -75,9 +75,7 @@
 			max-width: 65%;
 		}
 		
-		img {
-			padding: 0px;
-		}
+
 		
 		
 		
@@ -85,60 +83,46 @@
 			text-align: left;
 		}
 		
-		.image-container {
-			position: relative;
-		}
+.image-container {
+  position: relative;
+}
+
+.thumbnail-image {
+  width: 130px;
+}
+
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+#lightbox-image {
+  max-width: 80%;
+  max-height: 80%;
+  position: relative;
+}
+
+#close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: #fff;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+
 		
-		.image-container img {
-			max-width: 100%;
-			height: auto;
-			margin: 5px;
-			cursor: pointer;
-		}
-
-    /* Styles for the lightbox overlay */
-    #overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.8);
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 9999;
-    }
-
-    /* Styles for the enlarged image */
-    #lightbox {
-      max-width: 80%;
-      max-height: 80%;
-      position: relative; /* Added positioning for the close button */
-    }
-
-    /* Style for the close button */
-    #close {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      color: #fff;
-      font-size: 24px;
-      cursor: pointer;
-    }
-
-		.image-popup img {
-			max-width: 100px;
-			height: auto;
-		}
-
-		.image-container:hover .image-popup {
-			display: block;
-		}
 		
-		.caption {
-			max-width: 100px;
-		}
+
 		
 		@media screen and (max-width: 768px) {
 			h1 {
@@ -155,10 +139,9 @@
 				margin-left: 20px;
 				margin-bottom: -20px;
 			}
-			img {
-				width: 70%;
-				height: auto;
-			}
+			.thumbnail-image {
+    width: 90px;
+  }
 			
 			video {
 				max-width: 100%;
@@ -196,8 +179,10 @@
         .image-row img {
             max-width: 100%;
             height: auto;
-            margin: 5px;
+            margin: 3px;
         }
+		
+		
 	</style>
 </head>
 	
@@ -229,73 +214,26 @@ onclick="openLightbox('image1.jpg')"
 		
         <div class="image-row" style="padding-bottom: 100px;">
             
-			<img 
-			style="height: auto;
-			width: 130px; opacity: 10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Accrington.png" alt="Accrington" >	
-			<img
-			style="height: auto;
-			width: 130px; opacity: 10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/AFCBournemouth.png" alt="AFC Bournemouth" >
-			<img 
-			style="height: auto;
-			width: 130px; opacity: 10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/AFCWimbledon.png" alt="AFC Wimbledon" >
-			<img 
-			style="height: auto;
-			width: 130px; opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Arsenal.png" alt="Arsenal" >
-			
-			<img style="height: auto; width: 130px; opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/AstonVilla.png" alt="Aston Villa" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/AstonVilla.png')" >
-			
-			<img 
-			style="height: auto;
-			width: 130px; opacity: 10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Barnsley.png" alt="Barnsley" >
-			<img 
-			style="height: auto;
-			width: 130px; opacity: 10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Barrow.png" alt="Barrow" >
-			
-			<img 
-			style="height: auto; width: 130px; opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Birmingham.png" alt="Birmingham" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Birmingham.png')" >
-			
-			
-			<img 
-			style="height: auto;
-			width: 130px; opacity: 10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Blackburn.png" alt="Blackburn" >
-			<img 
-			style="height: auto;
-			width: 130px; opacity: 10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Blackpool.png" alt="Blackpool" >
-			<img 
-			style="height: auto;
-			width: 130px; opacity: 10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Bolton.png" alt="Bolton" >
-			<img 
-			style="height: auto;
-			width: 130px; opacity: 10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Bradford.png" alt="Bradford" >
-			<img 
-			style="height: auto;
-			width: 130px; opacity: 10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Brentford.png" alt="Brentford" >
-			<img 
-			style="height: auto;
-			width: 130px; opacity: 10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Brighton.png" alt="Brighton" >
-			
-			<img 
-			style="height: auto; width: 130px; opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/BristolCity.png" alt="Birmingham" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/BristolCity.png')" >
-			
-			<img 
-			style="height: auto;
-			width: 130px; opacity: 10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/BristolRovers.png" alt="Brighton" >
-			
-			<img 
-			style="height: auto; width: 130px; opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Burnley2.png" alt="Birmingham" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/Burnley.png')" >
-			
-			<img 
-			style="height: auto;
-			width: 130px; opacity: 10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Burton.png" alt="Burton" >
-			<img 
-			style="height: auto;
-			width: 130px; opacity: 10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Cambridge.png" alt="Cambridge" >
-			<img 
-			style="height: auto;
-			width: 130px; opacity: 10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Cardiff.png" alt="Cardiff" >
-			<img 
-			style="height: auto;
-			width: 130px; opacity: 10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Carlisle.png" alt="Carlisle" >
+
+		<div class="image-container">
+  		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/AstonVilla.png" alt="Aston Villa" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/AstonVilla3.png')">
+		</div>	
+		<div class="image-container">
+  		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/AstonVilla.png" alt="Aston Villa" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/AstonVilla3.png')">
+		</div>
+		<div class="image-container">
+  		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/AstonVilla.png" alt="Aston Villa" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/AstonVilla3.png')">
+		</div>
+		<div class="image-container">
+  		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/AstonVilla.png" alt="Aston Villa" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/AstonVilla3.png')">
+		</div>
+		<div class="image-container">
+  		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/AstonVilla.png" alt="Aston Villa" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/AstonVilla3.png')">
+		</div>
+		<div class="image-container">
+  		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/AstonVilla.png" alt="Aston Villa" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/AstonVilla3.png')">
+		</div>
+		
 			
 			
 			
@@ -305,27 +243,27 @@ onclick="openLightbox('image1.jpg')"
 			
 			
 			
-			
+ <!-- Lightbox overlay -->
 <div id="overlay">
-<!-- Enlarged image -->
-<img id="lightbox" src="#" alt="Enlarged Image">
-<!-- Close button -->
-<span id="close" onclick="closeLightbox()">&times;</span>
-  </div>
+  <!-- Enlarged image -->
+  <img id="lightbox-image" src="" alt="">
+  <!-- Close button -->
+  <span id="close" onclick="closeLightbox()">&times;</span>
+</div>
 
-  <script>
-    // Function to open the lightbox with the clicked image
-    function openLightbox(imageUrl) {
-      var lightboxImg = document.getElementById('lightbox');
-      lightboxImg.src = imageUrl;
-      document.getElementById('overlay').style.display = 'flex';
-    }
+<script>
+  // Function to open the lightbox with the clicked image
+  function openLightbox(imageUrl) {
+    var lightboxImg = document.getElementById('lightbox-image');
+    lightboxImg.src = imageUrl;
+    document.getElementById('overlay').style.display = 'flex';
+  }
 
-    // Function to close the lightbox
-    function closeLightbox() {
-      document.getElementById('overlay').style.display = 'none';
-    }
-  </script>
+  // Function to close the lightbox
+  function closeLightbox() {
+    document.getElementById('overlay').style.display = 'none';
+  }
+</script>
 			
     </div>		
 		
