--- a/UKStadiums.html
+++ b/UKStadiums.html
@@ -231,11 +231,11 @@ and change badge opacity to 100%
 		</div>
 <!-- UXBRIDGE	 			-->
 		<div class="image-container">
-  		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Uxbridge.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/Uxbridge.png')">
+  		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Uxbridge.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/Uxbridge2.png')">
 		</div>
 <!-- BOREHAMWOOD 			-->
 		<div class="image-container">
-  		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Borehamwood.png" alt="#" onclick="openLightbox('/images/Borhamwood2.png')">
+  		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Borehamwood.png" alt="#" onclick="openLightbox('/images/Borehamwood2.png')">
 		</div>
 
 
