--- a/UKStadiums.html
+++ b/UKStadiums.html
@@ -235,7 +235,7 @@ and change badge opacity to 100%
 		</div>
 <!-- BOREHAMWOOD 			-->
 		<div class="image-container">
-  		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Borehamwood.png" alt="#" onclick="openLightbox('/images/Borehamwood2.png')">
+  		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Borehamwood.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/Borehamwood2.png')">
 		</div>
 
 
