--- a/champ23-24.html
+++ b/champ23-24.html
@@ -154,16 +154,11 @@
 			<h3>Away Days</h3>
 			<br>
 		</div>
-
-      <br>
-			<br>
-			<br>
-			<br>
-			<br>
-
-		<div class="image-grid">
+		
   			
-        <p>Nothing to see here yet!</p>
+        	<div class="image-grid">
+  			
+  			<div class="image" style="padding-bottom: 100px"><img src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/AwayDayTickets/Borehamwood.png" alt="BirminghamCity" width="333px" title="[Pre-Season] Borehamwood 0-0 Watford"></div>
 			
 		</div>
 		
