--- a/UKStadiums.html
+++ b/UKStadiums.html
@@ -237,6 +237,10 @@ and change badge opacity to 100%
 		<div class="image-container">
   		<img class="thumbnail-image" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Borehamwood.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Grounds/Borehamwood2.png')">
 		</div>
+<!-- HYTHE	 			-->
+		<div class="image-container">
+  		<img class="thumbnail-image" style=" opacity:10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/OtherUKGrounds/Hythe.png" alt="#"  >
+		</div>
 
 
 
