--- a/the92.html
+++ b/the92.html
@@ -201,7 +201,6 @@
 			<div>
 				<h1>The 92</h1>
 				<p>This is my progress on completing the 92.</p>
-				<p>[28/92]</p>
 				<br>
 			</div>
 			
@@ -209,7 +208,7 @@
 		
 		<!-- add following code under each teams 'alt' tag within the <img> brackets:
 
-onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/PHOTO.png')
+onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/PHOTO.png')"
 
 and change badge opacity to 100%
 
@@ -220,11 +219,11 @@ and change badge opacity to 100%
             
 <!-- ACCRINGTON			 	-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style=" opacity:5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Accrington.png" alt="#" >
+  		<img class="thumbnail-image" style=" opacity:10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/Accrington.png" alt="#" >
 		</div>
 <!-- AFC BOURNEMOUTH 		-->
 		<div class="image-container">
-  		<img class="thumbnail-image" style=" opacity:5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/AFCBournemouth.png" alt="#">
+  		<img class="thumbnail-image" style=" opacity:10%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/AFCBournemouth.png" alt="#">
 		</div>
 <!-- AFC WIMBLEDON 			-->
 		<div class="image-container">
@@ -432,7 +431,7 @@ and change badge opacity to 100%
 		</div>
 <!-- MK DONS 				-->			
 		<div class="image-container">
-  		<img class="thumbnail-image" style="opacity: 5%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/MKDons.png" alt="#" >
+  		<img class="thumbnail-image" style="opacity: 100%" src="https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Badges/MKDons.png" alt="#" onclick="openLightbox('https://mikeychapmanfiles.s3.amazonaws.com/Portfolio/The92/Photos/MKDons.png')">
 		</div>
 <!-- MORECAMBE				-->
 		<div class="image-container">
@@ -588,7 +587,7 @@ and change badge opacity to 100%
 		</div>
 
 
-			
+
 			
 	
 			
